# Nautobot-Workshop

./: .gitignore  README.md
nautobot-docker-compose/: .gitignore  invoke.example.yml  pyproject.toml
nautobot-docker-compose/config/: nautobot_config.py
nautobot-docker-compose/custom_jinja_filters/: avd_filters.py  hash_filter.py  netaddr_filters.py
nautobot-docker-compose/custom_python_code/: custom_ext.py
nautobot-docker-compose/environments/: docker-compose.base.yml  docker-compose.local.yml  local.env
nautobot-docker-compose/jobs/: __init__.py  auto_config_interface.py  auto_config_interface_dispatcher.py  device_tag_checker.py  example_job1.py  example_job2.py  igploopback_validation.py  ping_validation.py  software_cve_discovery.py
nautobot-docker-compose/jobs/initial_design/: README.md  __init__.py
nautobot-docker-compose/jobs/initial_design/context/: __init__.py  initial_data.yml
nautobot-docker-compose/jobs/initial_design/designs/: 0001_design.yaml.j2  0001_extensible_ipam.yaml.j2  0002_org_devices.yaml.j2  0003_primary_ip.yaml.j2  0004_bgp_routing.yaml.j2
nautobot-docker-compose/jobs/lab_design/: __init__.py
nautobot-docker-compose/jobs/lab_design/context/: __init__.py
nautobot-docker-compose/jobs/lab_design/designs/: 0001_extensible_ipam.yaml.j2  0002_org_devices.yaml.j2  (+2 more)
nautobot-docker-compose/jobs/templates/: interface_config.j2
nautobot-docker-compose/jobs/tests/: pytest.ini  test_device_tag_job.py
nautobot-docker-compose/plugins/: ext.py
nautobot-docker-compose/templates/: customized_jobresult.html  igp_validation_form.html
(+209 files in other folders)
