[tool.poetry]
name = "nautobot-workshop-docker-compose"
version = "0.1.1"
description = ""
authors = ["John Doe <johndoe@mail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nautobot = "2.4.10"

# nautobot-example-plugin = {path = "plugins/plugin_example", develop = true}
nautobot-plugin-nornir = "^2.2.1"
nautobot-bgp-models = "^2.3.0"
nautobot-golden-config = "^2.4.0"
nautobot-design-builder = "^2.2.0"
toml = "^0.10.2"

# AVD Stuff
pyavd = "^5.4.0"
pytest = "^8.4.2"
pytest-django = "^4.11.1"
nautobot-device-lifecycle-mgmt = "^3.1.1"
beautifulsoup4 = "^4.13.5"
nautobot-ssot = "^3.9.4"
nautobot-device-onboarding = "^4.3.1"

[tool.poetry.dev-dependencies]
invoke = "*"
toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
